--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -2,4 +2,7 @@
 <html lang="en-US">
 <head>
 <title>{{ site.title }}</title>
+<!-- Vendor CSS -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-blue.min.css">
 </head>
