--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -4,5 +4,7 @@
 <title>{{ site.title }}</title>
 <!-- Vendor CSS -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-blue.min.css">
+<link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+<!-- Vendor JS -->
+<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 </head>
