--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -5,6 +5,23 @@
 <!-- Vendor CSS -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+<!-- New Material Root -->
+<style type="text/css">
+:root {
+    --mdc-theme-primary: rgb(49, 159, 255);
+    --mdc-theme-secondary: rgb(41, 133, 212);
+    --mdc-theme-background: #121212;
+    --mdc-theme-surface: #343434;
+    --mdc-theme-error: #F04747;
+
+    --mdc-theme-on-primary: #FFFFFF;
+    --mdc-theme-on-secondary: #FFFFFF;
+    --mdc-theme-on-surface: #000000;
+    --mdc-theme-on-error: #FFFFFF;
+}
+</style>
 <!-- Vendor JS -->
 <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 </head>
+<body></body>
+</html>
